@@ -53,6 +53,7 @@ This is not a breaking change, so former
 * Fix OpenTracing error tag handling (set transaction error result when tag value is `true`) {pull}1159[#1159]
 * Due to a bug in the build we didn't include the gRPC plugin in the build so far
 * `java.lang.ClassNotFoundException: Unable to load class 'jdk.internal...'` is thrown when tracing specific versions of Atlassian systems {pull}1168[#1168]
+* Make sure spans are kept active during `AsyncHandler` methods in the `AsyncHttpClient`
 
 
 [[release-notes-1.x]]
